again small changes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "es2021": true,
     "node": true
   },
+  "ignorePatterns": ["next.config.js"],
   "extends": [
     "next/core-web-vitals",
     "airbnb",
